samples/_failures_safe/1761647388_612287_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5cf698d4.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_5cf698d4.c:155:5: error: expected declaration or statement at end of input
  155 |     }
      |     ^
